# phasar

./: .clang-format  .clang-tidy  .cproject  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project  .travis.yml  BreakingChanges.md  Brewfile  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODING_GUIDELINES.txt  CONTRIBUTING.md  CREDITS.txt  Config.cmake.in  Dockerfile  InstallAptDependencies.sh  InstallLLVM.sh  LICENSE.txt  MACRO_TABLE.txt  Makefile  Makefile.old  MakefileMac  PAMM_TABLE.txt  README.md  TODOList.txt  TestScript.sh  bootstrap.sh  bootstrap_docker.sh  conanfile.in_llvm_tree.txt  conanfile.shared.txt  conanfile.txt  config.h.in  docker-compose.debug.yml  docker-compose.yml  (+8 more)
CogniCrypt++/: CMakeLists.txt
CogniCrypt++/CrySL/: CMakeLists.txt  compile.sh  compile_and_link.sh  compile_and_link_dbg.sh  cryslparser  main.cpp
CogniCrypt++/CrySL/Grammar/: COMMENTS_.g4  CrySL.g4  ENSURE_CONSTRAINTS_.g4  EVENTS_ORDER_.g4  Identifier.g4  NEGATES_FORBIDDEN.g4  SPEC_OBJECTS_REQUIRES_.g4  ensure_constraint.g4
CogniCrypt++/CrySL/Parser/: CMakeLists.txt  CrySL.interp  CrySL.tokens  CrySLLexer.cpp  CrySLLexer.h  CrySLLexer.interp  CrySLParser.cpp  CrySLParser.h  CrySLTypechecker.cpp  CrySLTypechecker.h  ObjectsTypeChecker.cpp  compile.sh
CogniCrypt++/CrySL/Rules/: EVP_CIPHER_CTX.cryptosl
CogniCrypt++/CrySL/lib/: CMakeLists.txt
CogniCrypt++/cmake/: ccpp_macros.cmake
CogniCrypt++/test/CrySL/: EVP_CIPHER.cryptosl  EVP_Calculate_HMAC.cryptosl  EVP_KDF_CTX.cryptosl  EVP_MD.cryptosl  EVP_MD_incorrect.cryptosl  EVP_Seal.cryptosl  KeyPairGeneration.cryptosl  PublicKeyEncryption.cryptosl  PublicKey_Signature.cryptosl  Stream_Decryption.cryptosl  one_time_key_single_verify.cryptosl  sealed_box_encrypted.cryptosl
CogniCrypt++/unittests/: CMakeLists.txt
CogniCrypt++/unittests/CrySL/: CMakeLists.txt  ObjectWithLLVM_Testing.cpp  OrderConverterTest.cpp  PredicateTest.cpp  TypeCheckTest.cpp
CogniCrypt++/utils/: Logger.h
examples/use-phasar-as-library/: CMakeLists.txt  README.md  myphasartool.cpp
examples/use-phasar-with-fetch-content/: CMakeLists.txt  README.md
lib/: CMakeLists.txt  IDESolverImpl.cpp  LibPhasar.cpp
lib/Analysis/ControlFlow/: CFG.cpp  LLVMBasedICFG.cpp
lib/Analysis/IfdsIde/: FlowFunction.cpp  IFDSSummary.cpp  ObservedCallingContexts.cpp  ZeroValue.cpp
lib/AnalysisStrategy/: CMakeLists.txt  Strategies.cpp
lib/Clang/: ClangController.cpp
lib/Config/: CMakeLists.txt  Configuration.cpp  phasar_config-config.cmake
lib/ControlFlow/: CMakeLists.txt  CallGraph.cpp  CallGraphAnalysisType.cpp  CallGraphData.cpp
lib/Controller/: AnalysisController.cpp  AnalysisControllerInternal.h  AnalysisControllerInternalIDE.h  AnalysisControllerXIDECSTDIOTS.cpp  AnalysisControllerXIDEFIIA.cpp  AnalysisControllerXIDEIIA.cpp  AnalysisControllerXIDELinearConst.cpp  AnalysisControllerXIDEOpenSSLTS.cpp  AnalysisControllerXIDESolverTest.cpp  AnalysisControllerXIDEXTaint.cpp  AnalysisControllerXIFDSConst.cpp  AnalysisControllerXIFDSFieldSensTaint.cpp  AnalysisControllerXIFDSLinearConst.cpp  AnalysisControllerXIFDSSolverTest.cpp  AnalysisControllerXIFDSTaint.cpp  AnalysisControllerXIFDSType.cpp  AnalysisControllerXIFDSUninit.cpp  AnalysisControllerXInterMonoSolverTest.cpp  AnalysisControllerXInterMonoTaint.cpp  AnalysisControllerXIntraMonoFullConstant.cpp  AnalysisControllerXIntraMonoSolverTest.cpp  AnalysisControllerXSparseIFDSTaint.cpp  AnalysisExecutor.cpp  CMakeLists.txt  phasar_controller-config.cmake
lib/DB/: CMakeLists.txt  DB.cpp  DBConn.cpp  Hexastore.cpp  HexastoreTest.cpp  LLVMProjectIRDB.cpp  ProjectIRDB.cpp  Queries.cpp  phasar_db-config.cmake
lib/Experimental/: CMakeLists.txt  Experimental.cpp  WWOCoreUtilsPreAnalysis.cpp  phasar_experimental-config.cmake
lib/PhasarClang/: CMakeLists.txt  ClangController.cpp  MyMatcher.cpp  RandomChangeASTConsumer.cpp  RandomChangeFrontendAction.cpp  RandomChangeVisitor.cpp  phasar_clang-config.cmake
lib/PhasarLLVM/: CMakeLists.txt  HelperAnalyses.cpp
lib/PhasarLLVM/DB/: CMakeLists.txt  (+1 more)
lib/PhasarPass/: CMakeLists.txt  Phasar.cpp  PhasarPass.cpp  PhasarPrinterPass.cpp  RegisterPasses.cpp  phasar_pass-config.cmake
lib/Pointer/: AliasAnalysisType.cpp  AliasInfo.cpp  CMakeLists.txt  PointerAnalysisType.cpp  PointsToInfo.cpp
lib/Utils/: AnalysisProperties.cpp  BitSetHash.cpp  BitSetView.cpp  CMakeLists.txt  ChronoUtils.cpp  DOTGraph.cpp  EdgeFunctionStats.cpp  ErrorFwd.cpp  GraphExtensions.cpp  IO.cpp  IOManip.cpp  IRDBOpaquePtrTypes.cpp  InitPhasar.cpp  LLVMCXXShorthands.cpp  LLVMIRToSrc.cpp  LLVMShorthands.cpp  Logger.cpp  Macros.cpp  NlohmannLogging.cpp  OpaquePtrTypeMap.cpp  PAMM.cpp  SOL.cpp  SoundinessFlags.cpp  Soundness.cpp  SoundnessFlag.cpp  Utilities.cpp  phasar_utils-config.cmake
lib/VarAlyzerExperiments/: CMakeLists.txt  VarAlyzerUtils.cpp  phasar_varalyzer_utils-config.cmake
tools/boomerang/: CMakeLists.txt  boomerang.cpp
tools/example-tool/: CMakeLists.txt  myphasartool.cpp
tools/indexed-uninit-analysis/: CMakeLists.txt  IFDSUninitializedVaraiblesIndexedAnalysis.cpp
tools/phasar/: CMakeLists.txt  boomerangtest.cpp  myphasartool.cpp  phasar-clang.cpp  phasar-llvm.cpp  phasar.cpp  phasarae.cpp  spdstest.cpp  syncpdstest.cpp  wpdstest.cpp
tools/phasar-clang/: CMakeLists.txt  phasar-clang.cpp
tools/phasar-cli/: CMakeLists.txt  phasar-cli.cpp
tools/phasar-llvm/: CMakeLists.txt  phasar-llvm.cpp
tools/phasar-old/: CMakeLists.txt  phasar-old.cpp
tools/varalyzer-comp/: CMakeLists.txt  varalyzer-comp.cpp
unittests/: .clang-tidy  CMakeLists.txt  FirstTest.cpp
unittests/CogniCrypt++/: TypeCheckTest.cpp
unittests/DB/: CMakeLists.txt  DBConnTest.cpp  HexastoreTest.cpp
unittests/PhasarLLVM/: CMakeLists.txt
unittests/TestUtils/: TestConfig.h
unittests/Utils/: AnalysisPrinterTest.cpp  BitVectorSetTest.cpp  CMakeLists.txt  CompilationTests.cpp  EquivalenceClassMapTest.cpp  IOTest.cpp  LLVMIRToSrcTest.cpp  LLVMShorthandsTest.cpp  LoggerTest.cpp  OnTheFlyAnalysisPrinterTest.cpp  PAMMTest.cpp  SourceMgrPrinterTest.cpp  StableVectorTest.cpp
(+4854 files in other folders)
